--- a/.travis.yml
+++ b/.travis.yml
@@ -39,4 +39,4 @@ before_script:
   - drush runserver 127.0.0.1:8080 &
   - until netstat -an 2>/dev/null | grep '8080.*LISTEN'; do true; done
 
-script: drush test-run CommerceOrderCleanupConfigurationTestCase --uri=http://127.0.0.1:8080
+script: drush test-run "Commerce Order Cleanup" --uri=http://127.0.0.1:8080
